--- a/asm_pandaboo/src/main/resources/application.properties
+++ b/asm_pandaboo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=asm_pandaboo
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=PANDABOO;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pandaboo;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123456
 
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.mvc.static-path-pattern= /images/**
-spring.web.resources.static-locations= file:uploads/
+spring.web.resources.static-locations= file:asm_pandaboo/uploads/
 spring.web.locale=vi_VN
 spring.web.locale-resolver=fixed
 
