--- a/asm_pandaboo/src/main/resources/application.properties
+++ b/asm_pandaboo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=asm_pandaboo
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=PANDABOO;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pandaboo;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123456
 
