--- a/asm_pandaboo/src/main/resources/application.properties
+++ b/asm_pandaboo/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.web.resources.static-locations= file:asm_pandaboo/uploads/
 spring.web.locale=vi_VN
 spring.web.locale-resolver=fixed
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=nhuhuynh24x8@gmail.com
